# digtask

./: .gitignore  Cargo.toml  README.md  dig.yaml  requeue.yaml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: config.rs  main.rs  run_context.rs  task.rs  test_utils.rs  token.rs  vars.rs
src/cli/: into.rs  mod.rs  run.rs
src/core/: common.rs  config.rs  executor.rs  gate.rs  mod.rs  run_context.rs  task.rs  token.rs  vars.rs
src/core/step/: bash_step.rs  basic_step.rs  common.rs  parallel_step.rs  python_step.rs  task_step.rs
src/step/: bash_step.rs  basic_step.rs  common.rs  mod.rs  parallel_step.rs  python_step.rs  task_step.rs
src/test/: utils.rs
