[package]
name = "requeue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
indexmap = { version = "2.2.5", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
winnow = "0.6.5"

[dev-dependencies]
winnow = { version = "0.6.5", features = [] }
