[package]
name = "digtask"
version = "0.1.0"
edition = "2021"
description = "Dig is a YAML-defined, OS-level task orchestrator. It can 'dig into' a specifed task, or 'dig out' a desired output file"
author = "(David) Severin Ryberg <s.ryberg@dras.tech>"
license-file = "LICENSE.txt"
keywords = ["task", "automation", "yaml", "orchestration", "runner", "utility"]
categories = ["asynchronous", "command-line-utilities", "concurrency", "development-tools::build-utils", "filesystem"]

[[bin]]
name = "dig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
async-executor = "1.8.0"
async-process = "2.1.0"
async-recursion = "1.1.0"
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
indexmap = { version = "2.2.5", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
smol = "2.0.0"
winnow = "0.6.5"

[dev-dependencies]
rstest = "0.18.2"
winnow = { version = "0.6.5", features = [] }
